# server/swaggerOutput.json
@@ -1795,7 +1795,7 @@
         ]
       }
     },
-    "/api/users/{UserId}/activities/{ActivityId}/like": {
+    "/api/users/{UserId}/activities/{EntityId}/like": {
       "post": {
         "tags": [
           "Activities"
@@ -1809,7 +1809,7 @@
             "type": "string"
           },
           {
-            "name": "ActivityId",
+            "name": "EntityId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -1818,6 +1818,18 @@
             "name": "authorization",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "Type": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -1844,7 +1856,7 @@
         ]
       }
     },
-    "/api/users/{UserId}/activities/{ActivityId}/dislike": {
+    "/api/users/{UserId}/activities/{EntityId}/dislike": {
       "delete": {
         "tags": [
           "Activities"
@@ -1858,7 +1870,7 @@
             "type": "string"
           },
           {
-            "name": "ActivityId",
+            "name": "EntityId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -1989,7 +2001,7 @@
         ]
       }
     },
-    "/api/activities/{ActivityId}/likedUsers": {
+    "/api/activities/{EntityId}/likedUsers": {
       "get": {
         "tags": [
           "Activities"
@@ -1997,7 +2009,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "ActivityId",
+            "name": "EntityId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -2375,6 +2387,178 @@
           }
         ],
         "responses": {
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "402": {
+            "description": "Payment Required"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
+      }
+    },
+    "/api/comments/{EntityId}/like": {
+      "post": {
+        "tags": [
+          "Comments"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "EntityId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "Type": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "402": {
+            "description": "Payment Required"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "444": {
+            "description": "Connection Closed Without Response"
+          }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
+      }
+    },
+    "/api/comments/{EntityId}/dislike": {
+      "delete": {
+        "tags": [
+          "Comments"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "EntityId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "402": {
+            "description": "Payment Required"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "444": {
+            "description": "Connection Closed Without Response"
+          }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
+      }
+    },
+    "/api/comments/{EntityId}/likedUsers": {
+      "get": {
+        "tags": [
+          "Comments"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "EntityId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "NextId",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "Limit",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "Keyword",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "OrderBy",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "Filter",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/LikedUsersData"
+            }
+          },
           "400": {
             "description": "Bad Request"
           },
